[VOL-4968] added mandatory uni-id optional vlan-id params, remove igmp event mechanism
